--- a/index.html
+++ b/index.html
@@ -7,24 +7,40 @@
 	<script src="color.js"></script>
 </head>
 <body>
-	<h1><a href="index.html">WEB<a></h1>
+	<h1><a href="#!welcome" onclick="fetchPage('welcome.txt')">WEB<a></h1>
 	<input type="button" value="night" onclick="nightDayHandler(this)">
-	
-	<ol>
-		<li><a onclick="
-			document.querySelector('article').innerHTML = '<h2>HTML</h2><p>HTML is.....</p>';
-		">HTML</a></li>
-		<!-- HTML.txt랑 CSS.txt랑 만들기는 했는데,, <h2>HTML</h2><p>HTML is.....</p> 대신 txt파일로 대체하여 불러오는건 어찌 할 수 있을까나?  -->
-		<li><a onclick="
-			document.querySelector('article').innerHTML = '<h2>CSS</h2><p>CSS is.....</p>';
-		">CSS</a></li>
-		<li><a onclick="
-			document.querySelector('article').innerHTML = '<h2>JavaScript</h2><p>JavaScript is...</p>';
-		">JavaScript</a></li>
-		<li><a href="4.html">PHP</a></li>
-	</ol>
-
+	<ol id="nav"></ol>
 	<article></article>
-	
+	<script>
+		function fetchPage(name){
+			fetch(name).then(function(response){
+				response.text().then(function(text){
+					document.querySelector('article').innerHTML = text;
+				})
+			});
+		}
+		if(location.hash){
+			fetchPage(location.hash.substr(2));
+		} else {
+			fetchPage('welcome.txt');
+		}
+		fetch('list.txt').then(function(response){
+				response.text().then(function(text){
+					console.log(text);
+					var items = text.split(',');
+					var i=0;
+					var tags = '';
+					while(i<items.length){
+						var item = items[i];
+						var tag = '<li><a href="#!'+item+'" onclick="fetchPage(\''+item+'.txt\')">'+item+'</a></li>';
+						console.log(tag);
+						tags = tags + tag;
+						i = i + 1;
+					}
+					console.log(items);
+					document.querySelector('#nav').innerHTML = tags;
+				})
+			});
+	</script>
 </body>
 </html>
